--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "firebase": "^3.5.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
